<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.mvvmexample.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_hor_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_ver_1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_ver_2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_login_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_hor_1" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivUser">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:letterSpacing="0.1"
                android:text="@string/log_in_title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/log_in_sub_title"
                android:textAlignment="center"
                android:textColor="#d4d4d4"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/gl_ver_2"
            app:layout_constraintStart_toStartOf="@id/gl_ver_1"
            app:layout_constraintTop_toBottomOf="@id/linear_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/roboto_black"
                android:letterSpacing="0.1"
                android:text="@string/log_in_email"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="@string/app_name"
                android:background="@drawable/bg_edit_text_login"
                android:elevation="5dp"
                android:hint="@string/log_in_et_email_hint"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:paddingHorizontal="10dp"
                android:text="@={viewmodel.email}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:fontFamily="@font/roboto_black"
                android:letterSpacing="0.1"
                android:text="@string/log_in_password"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="@string/app_name"
                android:background="@drawable/bg_edit_text_login"
                android:elevation="5dp"
                android:hint="@string/log_in_et_password_hint"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:text="@={viewmodel.password}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/log_in_forgot"
                android:textAlignment="textEnd"
                android:textColor="@color/colorOnPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button_login"
                android:fontFamily="@font/roboto_black"
                android:onClick="@{viewmodel::onLoginButtonClick}"
                android:text="@string/log_in_bt_login_text"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in_sign_up" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/log_in_sign_up_"
                    android:textColor="@color/colorOnPrimary" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>